--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,7 +27,7 @@ jobs:
       working-directory: "python"
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       working-directory: "python"
@@ -39,4 +39,5 @@ jobs:
     - name: Test with pytest
       working-directory: "python"
       run: |
-        pytest
+        coverage run -m pytest
+        coverage report
