--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -3,9 +3,9 @@ name: CS 222 proj
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ "main" ]
 
 jobs:
 
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-    - run: go get.
+      run: go get .
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -26,4 +26,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
+      run: go test -v ./...
+
+    - name: Coverage
       run: go test -v -cover ./...
