--- a/.github/workflows/go-format.yml
+++ b/.github/workflows/go-format.yml
@@ -8,7 +8,9 @@ jobs:
     - uses: actions/checkout@master
       with:
         fetch-depth: 0
+    - name: Fix git safe.directory in container  # https://github.com/actions/runner/issues/2033
+      run: mkdir -p /home/runner/work/_temp/_github_home && printf "[safe]\n\tdirectory = /github/workspace" > /home/runner/work/_temp/_github_home/.gitconfig
     - name: Golang Formatter
-      uses: sladyn98/auto-go-format@master
+      uses: djwyates/auto-go-format@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
