--- a/.github/workflows/go-coverage.yml
+++ b/.github/workflows/go-coverage.yml
@@ -8,8 +8,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  cover:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
