--- a/.github/workflows/go-test.yaml
+++ b/.github/workflows/go-test.yaml
@@ -8,8 +8,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -27,6 +26,3 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-
-    - name: Coverage
-      run: go test -v -cover ./...
