--- a/.github/workflows/go-test.yaml
+++ b/.github/workflows/go-test.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: go get .
+      run: go get ./cli
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v ./cli
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./cli
