--- a/.github/workflows/go-test.yaml
+++ b/.github/workflows/go-test.yaml
@@ -14,7 +14,8 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: go get ./cli
+      run: go get .
+      working-directory: cli
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -22,7 +23,9 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./cli
+      run: go build -v ./...
+      working-directory: cli
 
     - name: Test
-      run: go test -v ./cli
+      run: go test -v ./...
+      working-directory: cli
