--- a/.github/workflows/go-coverage.yml
+++ b/.github/workflows/go-coverage.yml
@@ -23,5 +23,11 @@ jobs:
         go-version: 1.19
 
     - name: Coverage
-      run: go test -v -cover ./...
+      run: go test -v -cover ./... -coverprofile coverage.out
       working-directory: cli
+
+    - name: upload coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage
+        path: cli/coverage.out
